xx YY 2006: 0.2.10 Miek <miek@miek.nl>
  -- what o what --


25 Apr 2006: 0.2.9 Miek <miek@miek.nl>
  -- bugfixes + restore updates --
   * gzip.sh, crypt.sh: ignore and accept '-c' option
   * crypt.sh: use mcrypt -q to be more silent
   * monthday.sh: implement -c option 
     script has completely been rewritten
   * monthday.sh: also process the last file
   * rorrim.sh: -c (remote) fixes and other tweaks
   * dump.sh: support -z (compress) and -k (encrypt) options
   * dump.sh: fix the path to rdup and mirror.sh (Timur Vafin)
   * grep.sh: removed from rdup-utils
   * tests: added monthday +0 restore test
   * install monthday.sh and rorrim.sh by default


22 Apr 2006: 0.2.8 Miek <miek@miek.nl>
   -- bugfixes --
   * scripts: support -V (version) in all scripts
   * scripts: print "invalid option" when encountered to stderr
   * scripts: disable 'set -o nounset' as it clashes with getopt
   * scripts: use read -r to allow for backslashes in filenames
   * gzip.sh, crypt.sh: fix a bug in new size calculation 
     (reported by Erland Isaksson)
   * mirror.sh: with -c, don't print "**" twice
   * mirror.sh: use cp, not cat for moving file locally
   * rorrim.sh: use cp, not cat for moving file locally
   * hist.sh, yesterday.sh: fix unbound vars
   * hist.sh: implemented -z and -k 
   * tests: better test for running all rdup-utils
   * tests: added gzip.sh test
   * tests: added crypt.sh test
   * tests: added run restore scripts test
   * Ruby impl. of mirror.sh: mirror.rb (proof of concept)
   

11 Apr 2006: 0.2.7 Miek <miek@miek.nl>
   -- bugfixes + restore features --
   * rdup: re-touch the timestamp file at the end. This way an interupted
     backup can be re-run because all the rdup files are still untouched.
   * rdup: really give an error on non-supported files
   * doc: update mirror.sh manpage: removed -z -k from the manual
   * doc: added gzip.sh, rorrim.sh and grep.sh manpage
   * yesterday.sh: work correctly with directories