@@ -1,6 +1,11 @@
 xx YY 2006: 0.2.10 Miek <miek@miek.nl>
   -- what o what --
-
+   * formalize file handling in rdup:
+     - plain files are accepted on the cmd line
+     - if files/dir do not exist rdup skips them, instead
+       of quiting
+   * rdup.8: documentation updates, and make it more clear
+     that rdup handles file arguments just fine.
 
 25 Apr 2006: 0.2.9 Miek <miek@miek.nl>
   -- bugfixes + restore updates --
